# Open-Gauge

./: README.md
Code/: .gitignore  CMakeLists.txt  LICENSE  README.md  partitions.csv  sdkconfig.defaults  sdkconfig.old
Code/Test Code/components/components/cpp_bus_driver/: idf_component.yml
Code/Test Code/components/components/cpp_bus_driver/src/: config.h  cpp_bus_driver_library.h  tool.cpp  tool.h
Code/Test Code/components/components/cpp_bus_driver/src/bus/: bus_guide.cpp  bus_guide.h
Code/Test Code/components/components/cpp_bus_driver/src/chip/: chip_guide.cpp  chip_guide.h
Code/Test Code/main/: idf_component.yml  main.c
Code/components/can_manager/: CMakeLists.txt  can_manager.c
Code/components/can_manager/include/: can_manager.h
Code/components/config_manager/: CMakeLists.txt  config_manager.c
Code/components/config_manager/include/: config_manager.h
Code/components/display_manager/: CMakeLists.txt  display_manager.c  gauge_ui.c  idf_component.yml
Code/components/display_manager/include/: display_manager.h  gauge_ui.h
Code/components/protocol_decoder/: CMakeLists.txt  haltech_ecu.c  link_ecu.c  obd2_decoder.c  protocol_decoder.c
Code/components/protocol_decoder/include/: haltech_ecu.h  link_ecu.h  obd2_decoder.h  protocol_decoder.h
Code/components/wifi_manager/: CMakeLists.txt  http_server.c  wifi_manager.c
Code/components/wifi_manager/include/: http_server.h  wifi_manager.h
Code/data/: app.js  index.html  style.css
Code/main/: CMakeLists.txt  idf_component.yml  main.c
Code/main/include/: app_config.h
Design/: OpenGauge.f3z
(+32 files in other folders)
