idf_component_register(
    SRCS
        "wifi_manager.c"
        "http_server.c"
    INCLUDE_DIRS "include"
    REQUIRES
        esp_wifi
        esp_event
        esp_netif
        esp_http_server
        vfs
        spiffs
        json
        log
        freertos
        config_manager
        can_manager
        protocol_decoder
        nvs_flash
        display_manager
)
